getting response - no UI

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
       </div>
     </div>
     <div class="row current" style="display:none">
-      <!-- <div class="col"> -->
-        <!-- <h1 id="current-conditions-icon"> -->
+      <div class="col">
+        <h1 id="current-conditions-icon">
           <!-- Your code should put something here -->
-        <!-- </h1> -->
-        <!-- <h1 id="location"> -->
+        </h1>
+        <h1 id="location">
           <!-- The provided code puts something here -->
-        <!-- </h1> -->
-        <!-- <h2 id="current-conditions-text"> -->
+        </h1>
+        <h2 id="current-conditions-text">
           <!-- Your code should put something here -->
-        <!-- </h2> -->
+        </h2>
       </div>
     </div>
     <div class="row forecast" style="display:none">
