Added current forecast

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="row current" style="display:none">
-      <div class="col">
+      <div class="col current">
         <h1 id="current-conditions-icon">
           <!-- Your code should put something here -->
         </h1>
@@ -35,6 +35,7 @@
         </h2>
       </div>
     </div>
+
     <div class="row forecast" style="display:none">
       <!-- Your code should put something here -->
     </div>
