Code so close to being done, I can almost taste it

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="row current" style="display:none">
-      <div class="col current">
+      <div class="col">
         <h1 id="current-conditions-icon">
           <!-- Your code should put something here -->
         </h1>
@@ -35,7 +35,6 @@
         </h2>
       </div>
     </div>
-
     <div class="row forecast" style="display:none">
       <!-- Your code should put something here -->
     </div>
