--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
     </div>
     <div class="row forecast" style="display:none">
       <!-- Your code should put something here -->
+      <div class="col">
+        <h3><i class="fas fa-sun"></i></h3>
+        <h4>89|55</h4>
+        <h5>Clear throughout the day.</h5>
+      </div>
     </div>
   </div>
 </body>
